# stag-python

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  StagPy.cpp  StagWrapper.cpp  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
example/: example.py
scripts/: windows_repair_wheel.py
src/stag/: StagModule.cpp  __init__.py
