[project]
name = "stag-python"
version = "1.1.0"
authors = [
    {name = "Manfred Stoiber", email = "manfred.stoiber@gmail.com"}
]
description = "STag - A Stable, Occlusion-Resistant Fiducial Marker System"
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "numpy"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/manfredstoiber/stag-python"

[build-system]
requires = [
    "setuptools==75.3.0",
    "numpy>=2.0,<3; (platform_system!='Linux' or platform_python_implementation!='PyPy' or platform_machine!='i686')",
    "oldest-supported-numpy; platform_system=='Linux' and platform_python_implementation=='PyPy' and platform_machine=='i686'",
    "requests==2.32.3",
    "urllib3==2.2.3"
]
build-backend = "setuptools.build_meta"


[tool.setuptools]
license-files = [
    "submodules/*/LICENSE",
    "LICENSE"
]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel==1.8.3"
repair-wheel-command = "python scripts/windows_repair_wheel.py {dest_dir} {wheel}"
